# slovak-lexer

./: CMakeLists.txt  Makefile  README.md  compile.sh  install.sh  ragel-compile.sh
include/: CMakeLists.txt  CisloSlovom.h  SlovakCisloSlovom.h  SlovakLexer.h  SlovakReplace.h
include/slovaklexer/: AnnotatorLexer.h  AnnotatorLexer.h.rl  CMakeLists.txt  RagelProcessor.h  SlovakLexer.h.rl  TCPFork.h  Ulice.h  Ulice.h.rl  utf8.rl
lemonstring/: CMakeLists.txt  LICENSE  README.md
lemonstring/include/: CMakeLists.txt  Command.h  Doxyfile  Tokenizer.h  UTokenizer.h  Vocab3.h
lemonstring/src/: CMakeLists.txt  Command.cpp  Tokenizer.cpp  UTokenizer.cpp  floatparse.c  floatparse.h  floatparse.y  floatparsef.cpp  testfp.cpp  utf8proc.h
src/: CMakeLists.txt  cisloslovom.cpp  dedup.cpp  ngram-replace.cpp  tokenizer2.cpp  ulice.cpp
src/lexer/: AnnotatorLexer.h  AnnotatorLexer.h.rl  CMakeLists.txt  RagelProcessor.h  SlovakCisloSlovom.h  SlovakLexer.h  SlovakLexer.h.rl  SlovakReplace.h  TCPFork.h  Ulice.h  Ulice.h.rl  UvPrefork.h  abbrev.rl  btree.h  cisla.rl  cisloslovom.cpp  ngram-replace.cpp  tokenizer2.cpp  ulice.cpp
